terraform files/5-route table attah.tf
#create rote table attach to our subnet to attach new route table not table by defult
resource "aws_route_table_association" "public_1_rt_a" {
  subnet_id      = aws_subnet.some_public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}
